---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary expr_prev_proc_call;\n\nfun test() {\n    Automaton(foo).procCall()';\n}\n"
input_file: tests/parser/test-data/expr-prev-proc-call.libsl
---
Err("encountered a syntax error at L6:18: mismatched input \'.\' expecting {\';\', \'==\', \'<\', \'>\', \'*\', \'/\', \'%\', \'+\', \'-\', \'!=\', \'<=\', \'>=\', \'&\', \'&&\', \'|\', \'||\', \'^\', \'is\', \'as\'}")
